# Heroes

./: CMakeLists.txt  Class_Diagram.xml  README.md  github_settings.xml  main.cpp  other.xml  project.default.xml  ui.lnf.xml  vcs.xml
Heroes-Tests/: CMakeLists.txt
include/: Archer.h  Armor.h  Enemy.h  Functions.h  Game.h  Hero.h  Inventory.h  Item.h  Mage.h  Shop.h  Warrior.h  heros.h  heros.hpp
saved_games/: save.txt
src/: Archer.cpp  Armor.cpp  CMakeLists.txt  Enemy.cpp  Functions.cpp  Game.cpp  Hero.cpp  Inventory.cpp  Item.cpp  Mage.cpp  Shop.cpp  Warrior.cpp  heros.cpp  warrior.cpp
test/: CMakeLists.txt  tests.cpp
tests/: CMakeLists.txt  test.cpp
